code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_108.wast
(assert_invalid
  (module (func $type-break-nested-i32-vs-void
    (block (result i32) (block (result i32) (br 1 (i32.const 1))) (br 0))
  ))
  "type mismatch"
)